mobile device text visibility fixed

--- a/src/components/main.module.css
+++ b/src/components/main.module.css
@@ -12,7 +12,7 @@
 
 @media only screen and (max-width: 400px) {
     .container {
-      padding: 10px;
+      padding: 15px;
     }
 }
 
@@ -140,7 +140,6 @@
     line-height: 1.9rem;
     color: rgba(0,0,0,.84);
     text-rendering: optimizeLegibility;
-    margin-right: 180px;
 }
 
 .SideProjectList{ 
